--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,8 +12,34 @@ RUN apt-get update && apt-get install -y \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Install Playwright system dependencies as root
-RUN playwright install-deps chromium
+# Install Playwright system dependencies as root (with --force-yes to handle missing packages)
+RUN playwright install-deps chromium || \
+    apt-get update && apt-get install -y \
+    fonts-liberation \
+    fonts-unifont \
+    libasound2 \
+    libatk-bridge2.0-0 \
+    libatk1.0-0 \
+    libatspi2.0-0 \
+    libcups2 \
+    libdbus-1-3 \
+    libdrm2 \
+    libgbm1 \
+    libgtk-3-0 \
+    libnspr4 \
+    libnss3 \
+    libpango-1.0-0 \
+    libwayland-client0 \
+    libx11-6 \
+    libxcb1 \
+    libxcomposite1 \
+    libxdamage1 \
+    libxext6 \
+    libxfixes3 \
+    libxkbcommon0 \
+    libxrandr2 \
+    xvfb \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy application code
 COPY . .
